--- a/index.html
+++ b/index.html
@@ -305,9 +305,14 @@
             <p class="portfolio_description">
               Лендинг приложения, реализованный на HTML+CSS
             </p>
-            <a href="https://github.com/derpmagician/shorten" class="button button-flex button-small portfolio_button"
+            <a href="https://vegvisir46.github.io/NoTab_lending/" class="button button-flex button-small portfolio_button"
                target="_blank">
-              Check out
+              Просмотр
+              <i class="uil uil-arrow-right button_icon"></i>
+            </a>
+            <a href="https://github.com/vegvisir46/NoTab_lending" class="button button-flex button-small portfolio_button"
+               target="_blank">
+              Исходники
               <i class="uil uil-arrow-right button_icon"></i>
             </a>
           </div>
