--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
         <!-- Project 3 -->
         <div class="portfolio_content grid swiper-slide">
-          <img src="./assets/images/shorten.png" alt="" class="portfolio_img">
+          <img src="./assets/images/notab.png" alt="" class="portfolio_img">
 
           <div class="portfolio_data">
             <h3 class="portfolio_title">
