--- a/index.html
+++ b/index.html
@@ -245,8 +245,32 @@
 
     <div class="portfolio_container container swiper-container swiper mySwiper">
       <div class="swiper-wrapper">
-
         <!-- Project 1 -->
+        <div class="portfolio_content grid swiper-slide">
+          <img src="./assets/images/react-movie.png" alt="" class="portfolio_img">
+
+          <div class="portfolio_data">
+            <h3 class="portfolio_title">
+              React movies
+            </h3>
+            <p class="portfolio_description">
+              Приложение для поиска фильмов, сериалов, мультфильмов, просмотра рейтинга, актерского состава и другой информации, построенное на базе React+Redux Toolkit.
+              В качестве API используется неофициальное API сайта Кинопоиск. Количество запросов в сутки ограничено, поэтому могут наблюдаться проблемы, которые легко устраняются путем обращения к автору приложения :)
+            </p>
+            <a href="https://kinopoisk-react-redux.vercel.app/" class="button button-flex button-small portfolio_button"
+               target="_blank">
+              Просмотр
+              <i class="uil uil-arrow-right button_icon"></i>
+            </a>
+            <a href="https://github.com/vegvisir46/kinopoisk_react-redux" class="button button-flex button-small portfolio_button"
+               target="_blank">
+              Исходники
+              <i class="uil uil-arrow-right button_icon"></i>
+            </a>
+          </div>
+        </div>
+
+        <!-- Project 2 -->
         <div class="portfolio_content grid swiper-slide">
           <img src="./assets/images/todo-list-ts.png" alt="" class="portfolio_img">
 
@@ -270,7 +294,7 @@
           </div>
         </div>
 
-        <!-- Project 2 -->
+        <!-- Project 3 -->
         <div class="portfolio_content grid swiper-slide">
           <img src="./assets/images/calendar.png" alt="" class="portfolio_img">
 
@@ -294,7 +318,7 @@
           </div>
         </div>
 
-        <!-- Project 3 -->
+        <!-- Project 4 -->
         <div class="portfolio_content grid swiper-slide">
           <img src="./assets/images/notab.png" alt="" class="portfolio_img">
 
