--- a/index.html
+++ b/index.html
@@ -272,6 +272,30 @@
 
         <!-- Project 2 -->
         <div class="portfolio_content grid swiper-slide">
+          <img src="./assets/images/pizza-shop.png" alt="" class="portfolio_img">
+
+          <div class="portfolio_data">
+            <h3 class="portfolio_title">
+              Pizza Shop
+            </h3>
+            <p class="portfolio_description">
+              Интернет-магазин пиццы, выполненный на React + Redux Toolkit + TypeScript <br>
+            </p>
+            <a href="https://pizza-shop-vegvisir46.vercel.app/" class="button button-flex button-small portfolio_button"
+               target="_blank">
+              Просмотр
+              <i class="uil uil-arrow-right button_icon"></i>
+            </a>
+            <a href="https://github.com/vegvisir46/pizza_shop" class="button button-flex button-small portfolio_button"
+               target="_blank">
+              Исходники
+              <i class="uil uil-arrow-right button_icon"></i>
+            </a>
+          </div>
+        </div>
+
+        <!-- Project 3 -->
+        <div class="portfolio_content grid swiper-slide">
           <img src="./assets/images/todo-list-ts.png" alt="" class="portfolio_img">
 
           <div class="portfolio_data">
@@ -294,7 +318,7 @@
           </div>
         </div>
 
-        <!-- Project 3 -->
+        <!-- Project 4 -->
         <div class="portfolio_content grid swiper-slide">
           <img src="./assets/images/calendar.png" alt="" class="portfolio_img">
 
@@ -318,7 +342,7 @@
           </div>
         </div>
 
-        <!-- Project 4 -->
+        <!-- Project 5 -->
         <div class="portfolio_content grid swiper-slide">
           <img src="./assets/images/notab.png" alt="" class="portfolio_img">
 
