--- a/index.html
+++ b/index.html
@@ -254,15 +254,18 @@
               React movies
             </h3>
             <p class="portfolio_description">
-              Приложение для поиска фильмов, сериалов, мультфильмов, просмотра рейтинга, актерского состава и другой информации, построенное на базе React+Redux Toolkit.
-              В качестве API используется неофициальное API сайта Кинопоиск. Количество запросов в сутки ограничено, поэтому могут наблюдаться проблемы, которые легко устраняются путем обращения к автору приложения :)
+              Приложение для поиска фильмов, сериалов, мультфильмов, просмотра рейтинга, актерского состава и другой
+              информации, построенное на базе React+Redux Toolkit.
+              В качестве API используется неофициальное API сайта Кинопоиск. Количество запросов в сутки ограничено,
+              поэтому могут наблюдаться проблемы, которые легко устраняются путем обращения к автору приложения :)
             </p>
             <a href="https://kinopoisk-react-redux.vercel.app/" class="button button-flex button-small portfolio_button"
                target="_blank">
               Просмотр
               <i class="uil uil-arrow-right button_icon"></i>
             </a>
-            <a href="https://github.com/vegvisir46/kinopoisk_react-redux" class="button button-flex button-small portfolio_button"
+            <a href="https://github.com/vegvisir46/kinopoisk_react-redux"
+               class="button button-flex button-small portfolio_button"
                target="_blank">
               Исходники
               <i class="uil uil-arrow-right button_icon"></i>
@@ -305,12 +308,14 @@
             <p class="portfolio_description">
               Список дел, реализованный на React + TypeScript <br>Демонстрация создания CRUD-приложения
             </p>
-            <a href="https://vegvisir46.github.io/react-ts-todo_08/" class="button button-flex button-small portfolio_button"
+            <a href="https://vegvisir46.github.io/react-ts-todo_08/"
+               class="button button-flex button-small portfolio_button"
                target="_blank">
               Просмотр
               <i class="uil uil-arrow-right button_icon"></i>
             </a>
-            <a href="https://github.com/vegvisir46/react-ts-todo_08" class="button button-flex button-small portfolio_button"
+            <a href="https://github.com/vegvisir46/react-ts-todo_08"
+               class="button button-flex button-small portfolio_button"
                target="_blank">
               Исходники
               <i class="uil uil-arrow-right button_icon"></i>
@@ -329,12 +334,14 @@
             <p class="portfolio_description">
               Интерактивный календарь, реализованный на React + TypeScript.
             </p>
-            <a href="https://vegvisir46.github.io/react-ts-todo_08/" class="button button-flex button-small portfolio_button"
+            <a href="https://vegvisir46.github.io/react-ts-todo_08/"
+               class="button button-flex button-small portfolio_button"
                target="_blank">
               Просмотр
               <i class="uil uil-arrow-right button_icon"></i>
             </a>
-            <a href="https://github.com/vegvisir46/react-ts-todo_08" class="button button-flex button-small portfolio_button"
+            <a href="https://github.com/vegvisir46/react-ts-todo_08"
+               class="button button-flex button-small portfolio_button"
                target="_blank">
               Исходники
               <i class="uil uil-arrow-right button_icon"></i>
@@ -344,6 +351,30 @@
 
         <!-- Project 5 -->
         <div class="portfolio_content grid swiper-slide">
+          <img src="./assets/images/pokedex.png" alt="" class="portfolio_img">
+
+          <div class="portfolio_data">
+            <h3 class="portfolio_title">
+              Pokedex - библиотека Покемонов
+            </h3>
+            <p class="portfolio_description">
+              Приложение, позволяющее просмореть информацию по всем существам из мультфильма Покемон. Реализовано на Redux Toolkit + Typescript
+            </p>
+            <a href="https://pokedex-git-main-vegvisir46.vercel.app/" class="button button-flex button-small portfolio_button"
+               target="_blank">
+              Просмотр
+              <i class="uil uil-arrow-right button_icon"></i>
+            </a>
+            <a href="https://github.com/vegvisir46/pokedex" class="button button-flex button-small portfolio_button"
+               target="_blank">
+              Исходники
+              <i class="uil uil-arrow-right button_icon"></i>
+            </a>
+          </div>
+        </div>
+
+        <!-- Project 6 -->
+        <div class="portfolio_content grid swiper-slide">
           <img src="./assets/images/notab.png" alt="" class="portfolio_img">
 
           <div class="portfolio_data">
@@ -351,14 +382,16 @@
               NoTab Lending
             </h3>
             <p class="portfolio_description">
-              Лендинг приложения, реализованный на HTML+CSS
+              Лендинг, реализованный на HTML+CSS
             </p>
-            <a href="https://vegvisir46.github.io/NoTab_lending/" class="button button-flex button-small portfolio_button"
+            <a href="https://vegvisir46.github.io/NoTab_lending/"
+               class="button button-flex button-small portfolio_button"
                target="_blank">
               Просмотр
               <i class="uil uil-arrow-right button_icon"></i>
             </a>
-            <a href="https://github.com/vegvisir46/NoTab_lending" class="button button-flex button-small portfolio_button"
+            <a href="https://github.com/vegvisir46/NoTab_lending"
+               class="button button-flex button-small portfolio_button"
                target="_blank">
               Исходники
               <i class="uil uil-arrow-right button_icon"></i>
