--- a/index.html
+++ b/index.html
@@ -125,10 +125,11 @@
   <section class="about section" id="about">
     <h2 class="section_title">Обо мне</h2><br>
     <div class="about_container container grid">
-      <img src="./assets/images/Al_Ro.JPG" alt="" class="about_img"/>
+      <img src="./assets/images/Al_Ro_photo.JPG" alt="" class="about_img"/>
       <div class="about_data">
         <p class="about_description">
           Привет! 👋 Меня зовут Саша, я начинающий фронтенд-разработчик.
+          Люблю фронтенд, фотографирование и психоделический рок.
         </p>
         <div class="about_button">
           <a download="" href="./Al_Ro_CV.pdf" class="button button--flex" target="_blank">
