minor adaptive fixes

--- a/index.html
+++ b/index.html
@@ -260,17 +260,19 @@
               В качестве API используется неофициальное API сайта Кинопоиск. Количество запросов в сутки ограничено,
               поэтому могут наблюдаться проблемы, которые легко устраняются путем обращения к автору приложения :)
             </p>
-            <a href="https://kinopoisk-react-redux.vercel.app/" class="button button-flex button-small portfolio_button"
-               target="_blank">
-              Просмотр
-              <i class="uil uil-arrow-right button_icon"></i>
-            </a>
-            <a href="https://github.com/vegvisir46/kinopoisk_react-redux"
-               class="button button-flex button-small portfolio_button"
-               target="_blank">
-              Исходники
-              <i class="uil uil-arrow-right button_icon"></i>
-            </a>
+            <div class="project_buttons">
+              <a href="https://kinopoisk-react-redux.vercel.app/" class="button button-flex button-small portfolio_button"
+                 target="_blank">
+                Просмотр
+                <i class="uil uil-arrow-right button_icon"></i>
+              </a>
+              <a href="https://github.com/vegvisir46/kinopoisk_react-redux"
+                 class="button button-flex button-small portfolio_button"
+                 target="_blank">
+                Исходники
+                <i class="uil uil-arrow-right button_icon"></i>
+              </a>
+            </div>
           </div>
         </div>
 
