minor visual fixes

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <div class="skills__logo">
             <img src="img/icons/js.svg" alt="">
           </div>
-          <div class="skills__title">Vanilla Javascript</div>
+          <div class="skills__title">Javascript</div>
         </li>
         <li class="skills__item">
           <div class="skills__logo">
@@ -236,6 +236,12 @@
           </div>
           <div class="skills__title">Material UI</div>
         </li>
+        <li class="skills__item">
+          <div class="skills__logo">
+            <img src="img/icons/ps.png" alt="">
+          </div>
+          <div class="skills__title">PhotoShop</div>
+        </li>
       </ul>
     </div>
   </section>
@@ -261,7 +267,8 @@
               поэтому могут наблюдаться проблемы, которые легко устраняются путем обращения к автору приложения :)
             </p>
             <div class="project_buttons">
-              <a href="https://kinopoisk-react-redux.vercel.app/" class="button button-flex button-small portfolio_button"
+              <a href="https://kinopoisk-react-redux.vercel.app/"
+                 class="button button-flex button-small portfolio_button"
                  target="_blank">
                 Просмотр
                 <i class="uil uil-arrow-right button_icon"></i>
@@ -287,16 +294,20 @@
             <p class="portfolio_description">
               Интернет-магазин пиццы, выполненный на React + Redux Toolkit + TypeScript <br>
             </p>
-            <a href="https://pizza-shop-vegvisir46.vercel.app/" class="button button-flex button-small portfolio_button"
-               target="_blank">
-              Просмотр
-              <i class="uil uil-arrow-right button_icon"></i>
-            </a>
-            <a href="https://github.com/vegvisir46/pizza_shop" class="button button-flex button-small portfolio_button"
-               target="_blank">
-              Исходники
-              <i class="uil uil-arrow-right button_icon"></i>
-            </a>
+            <div class="project_buttons">
+              <a href="https://pizza-shop-vegvisir46.vercel.app/"
+                 class="button button-flex button-small portfolio_button"
+                 target="_blank">
+                Просмотр
+                <i class="uil uil-arrow-right button_icon"></i>
+              </a>
+              <a href="https://github.com/vegvisir46/pizza_shop"
+                 class="button button-flex button-small portfolio_button"
+                 target="_blank">
+                Исходники
+                <i class="uil uil-arrow-right button_icon"></i>
+              </a>
+            </div>
           </div>
         </div>
 
@@ -311,18 +322,21 @@
             <p class="portfolio_description">
               Список дел, реализованный на React + TypeScript <br>Демонстрация создания CRUD-приложения
             </p>
-            <a href="https://vegvisir46.github.io/react-ts-todo_08/"
-               class="button button-flex button-small portfolio_button"
-               target="_blank">
-              Просмотр
-              <i class="uil uil-arrow-right button_icon"></i>
-            </a>
-            <a href="https://github.com/vegvisir46/react-ts-todo_08"
-               class="button button-flex button-small portfolio_button"
-               target="_blank">
-              Исходники
-              <i class="uil uil-arrow-right button_icon"></i>
-            </a>
+            <div class="project_buttons">
+              <a href="https://vegvisir46.github.io/react-ts-todo_08/"
+                 class="button button-flex button-small portfolio_button"
+                 target="_blank">
+                Просмотр
+                <i class="uil uil-arrow-right button_icon"></i>
+              </a>
+              <a href="https://github.com/vegvisir46/react-ts-todo_08"
+                 class="button button-flex button-small portfolio_button"
+                 target="_blank">
+                Исходники
+                <i class="uil uil-arrow-right button_icon"></i>
+              </a>
+            </div>
+
           </div>
         </div>
 
@@ -337,18 +351,20 @@
             <p class="portfolio_description">
               Интерактивный календарь, реализованный на React + TypeScript.
             </p>
-            <a href="https://vegvisir46.github.io/react-ts-todo_08/"
-               class="button button-flex button-small portfolio_button"
-               target="_blank">
-              Просмотр
-              <i class="uil uil-arrow-right button_icon"></i>
-            </a>
-            <a href="https://github.com/vegvisir46/react-ts-todo_08"
-               class="button button-flex button-small portfolio_button"
-               target="_blank">
-              Исходники
-              <i class="uil uil-arrow-right button_icon"></i>
-            </a>
+            <div class="project_buttons">
+              <a href="https://vegvisir46.github.io/react-ts-todo_08/"
+                 class="button button-flex button-small portfolio_button"
+                 target="_blank">
+                Просмотр
+                <i class="uil uil-arrow-right button_icon"></i>
+              </a>
+              <a href="https://github.com/vegvisir46/react-ts-todo_08"
+                 class="button button-flex button-small portfolio_button"
+                 target="_blank">
+                Исходники
+                <i class="uil uil-arrow-right button_icon"></i>
+              </a>
+            </div>
           </div>
         </div>
 
@@ -361,18 +377,22 @@
               Pokedex - библиотека Покемонов
             </h3>
             <p class="portfolio_description">
-              Приложение, позволяющее просмореть информацию по всем существам из мультфильма Покемон. Реализовано на Redux Toolkit + Typescript
+              Приложение, позволяющее просмореть информацию по всем существам из мультфильма Покемон. Реализовано на
+              Redux Toolkit + Typescript
             </p>
-            <a href="https://pokedex-git-main-vegvisir46.vercel.app/" class="button button-flex button-small portfolio_button"
-               target="_blank">
-              Просмотр
-              <i class="uil uil-arrow-right button_icon"></i>
-            </a>
-            <a href="https://github.com/vegvisir46/pokedex" class="button button-flex button-small portfolio_button"
-               target="_blank">
-              Исходники
-              <i class="uil uil-arrow-right button_icon"></i>
-            </a>
+            <div class="project_buttons">
+              <a href="https://pokedex-git-main-vegvisir46.vercel.app/"
+                 class="button button-flex button-small portfolio_button"
+                 target="_blank">
+                Просмотр
+                <i class="uil uil-arrow-right button_icon"></i>
+              </a>
+              <a href="https://github.com/vegvisir46/pokedex" class="button button-flex button-small portfolio_button"
+                 target="_blank">
+                Исходники
+                <i class="uil uil-arrow-right button_icon"></i>
+              </a>
+            </div>
           </div>
         </div>
 
@@ -387,18 +407,20 @@
             <p class="portfolio_description">
               Лендинг, реализованный на HTML+CSS
             </p>
-            <a href="https://vegvisir46.github.io/NoTab_lending/"
-               class="button button-flex button-small portfolio_button"
-               target="_blank">
-              Просмотр
-              <i class="uil uil-arrow-right button_icon"></i>
-            </a>
-            <a href="https://github.com/vegvisir46/NoTab_lending"
-               class="button button-flex button-small portfolio_button"
-               target="_blank">
-              Исходники
-              <i class="uil uil-arrow-right button_icon"></i>
-            </a>
+            <div class="project_buttons">
+              <a href="https://vegvisir46.github.io/NoTab_lending/"
+                 class="button button-flex button-small portfolio_button"
+                 target="_blank">
+                Просмотр
+                <i class="uil uil-arrow-right button_icon"></i>
+              </a>
+              <a href="https://github.com/vegvisir46/NoTab_lending"
+                 class="button button-flex button-small portfolio_button"
+                 target="_blank">
+                Исходники
+                <i class="uil uil-arrow-right button_icon"></i>
+              </a>
+            </div>
           </div>
         </div>
 
