--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             </h3>
             <p class="portfolio_description">
               Приложение для поиска фильмов, сериалов, мультфильмов, просмотра рейтинга, актерского состава и другой
-              информации, построенное на базе React+Redux Toolkit.
+              информации, построенное на базе React + Redux Toolkit.
               В качестве API используется неофициальное API сайта Кинопоиск. Количество запросов в сутки ограничено,
               поэтому могут наблюдаться проблемы, которые легко устраняются путем обращения к автору приложения :)
             </p>
@@ -292,7 +292,7 @@
               Pizza Shop
             </h3>
             <p class="portfolio_description">
-              Интернет-магазин пиццы, выполненный на React + Redux Toolkit + TypeScript <br>
+              Интернет-магазин пиццы, выполненный на TypeScript + Redux Toolkit. В качестве базы данных используется MockAPI, откуда данные подгружаются с помощью библиотеки axios. <br>
             </p>
             <div class="project_buttons">
               <a href="https://pizza-shop-vegvisir46.vercel.app/"
@@ -349,7 +349,7 @@
               Календарь
             </h3>
             <p class="portfolio_description">
-              Интерактивный календарь, реализованный на React + TypeScript.
+              Интерактивный календарь, реализованный на TypeScript.
             </p>
             <div class="project_buttons">
               <a href="https://vegvisir46.github.io/react-ts-todo_08/"
