add 7th proj & minor fixes

--- a/index.html
+++ b/index.html
@@ -313,6 +313,34 @@
 
         <!-- Project 3 -->
         <div class="portfolio_content grid swiper-slide">
+          <img src="./assets/images/lotr.png" alt="" class="portfolio_img">
+
+          <div class="portfolio_data">
+            <h3 class="portfolio_title">
+              The Lord of the Rings - Library
+            </h3>
+            <p class="portfolio_description">
+              Приложение на React для фанатов известной вселенной Дж.Р.Р. Толкина, позволяющее посмотреть информацию обо всех персонажах, а так же книгах и фильмах. Данные подгружаются с бесплатной API the-one-api. <br>
+            </p>
+            <div class="project_buttons">
+              <a href="https://lotr-library-git-main-vegvisir46.vercel.app/"
+                 class="button button-flex button-small portfolio_button"
+                 target="_blank">
+                Просмотр
+                <i class="uil uil-arrow-right button_icon"></i>
+              </a>
+              <a href="https://github.com/vegvisir46/LOTR_library"
+                 class="button button-flex button-small portfolio_button"
+                 target="_blank">
+                Исходники
+                <i class="uil uil-arrow-right button_icon"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Project 4 -->
+        <div class="portfolio_content grid swiper-slide">
           <img src="./assets/images/todo-list-ts.png" alt="" class="portfolio_img">
 
           <div class="portfolio_data">
@@ -340,7 +368,7 @@
           </div>
         </div>
 
-        <!-- Project 4 -->
+        <!-- Project 5 -->
         <div class="portfolio_content grid swiper-slide">
           <img src="./assets/images/calendar.png" alt="" class="portfolio_img">
 
@@ -368,7 +396,7 @@
           </div>
         </div>
 
-        <!-- Project 5 -->
+        <!-- Project 6 -->
         <div class="portfolio_content grid swiper-slide">
           <img src="./assets/images/pokedex.png" alt="" class="portfolio_img">
 
@@ -396,7 +424,7 @@
           </div>
         </div>
 
-        <!-- Project 6 -->
+        <!-- Project 7 -->
         <div class="portfolio_content grid swiper-slide">
           <img src="./assets/images/notab.png" alt="" class="portfolio_img">
 
